# NativePlanning

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  engineering_spec.md  product_spec.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
docs/: architecture.md  changelog.md  claude_code_workflow.md  data_simulation.md  demo_script.md  deployment.md  design_proposal.md  evaluation.md  final_submission_checklist.md  handoff_final_short.md  handoff_mvp2.md  handoff_mvp4.md  handoff_mvp46_bugfix.md  judge_guide.md  local_life_catalog.md  meituan_alignment.md  mock_api_design.md  planning_strategy.md  project_status.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExecutionResult.tsx  IntentPanel.tsx  PlanCard.tsx  PlanSelector.tsx  RevisionInput.tsx  ShareMessage.tsx  Timeline.tsx  ToolTrace.tsx
frontend/lib/: api.ts  types.ts
src/api/: app.py  schemas.py
src/cli/: main.py
src/mock_api/: __init__.py  booking.py  (+3 more)
tests/: conftest.py  test_api.py  test_bugfix_mvp46.py  test_consistency.py  test_couple_meal.py  test_datetime_parser.py  test_evening_family.py  test_execution_polish.py  test_failures.py  test_happy_path.py  test_intent_parser_llm.py  test_intent_parser_rules.py  test_location_anchor.py  test_meal_policy.py  test_multistop_planner.py  test_opening_hours.py  test_planner_audience_filter.py  test_revision_integration.py  test_revision_parser.py  test_revision_scope.py  test_robustness.py  test_ui_client.py
(+21 files in other folders)
