[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "native-planning"
version = "0.1.0"
description = "Local weekend activity planning and execution agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
ui = ["streamlit>=1.30"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:langsmith_plugin"
